impl POST /spots API
